--- a/cmsblog/package.json
+++ b/cmsblog/package.json
@@ -11,11 +11,13 @@
     "@tinymce/tinymce-vue": "^3.0.1",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "iview": "^3.5.4",
     "quill": "^1.3.6",
     "quill-image-drop-module": "^1.0.3",
     "tiptap-vuetify": "^2.8.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.3",
     "vue2-editor": "^2.10.2",
     "vuetify": "^2.1.12"
